tests/snapshots/sizes__slow_queries_200x50.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                                                                                                  │
│  FROM users                                                                                                                                                                                          │
│  WHERE plan = 'pro'                                                                                                                                                                                  │
│  ORDER BY created_at DESC;                                                                                                                                                                           │
└───────┌ slow queries — pg_stat_statements — r refresh · enter copy · q close ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐───────┘
┌ result│    total ms    mean ms     calls      rows  query                                                                                                                                    │───────┐
│id  ema│    12345.60      12.34   1000000   1000000  SELECT * FROM users WHERE active = true                                                                                                  │       │
│1   ada│      800.00       3.20       250       250  UPDATE orders SET status = $1 WHERE id = $2                                                                                              │       │
│2   lin│                                                                                                                                                                                      │       │
│3   gra│                                                                                                                                                                                      │       │
│4   ala│                                                                                                                                                                                      │       │
│5   eds│                                                                                                                                                                                      │       │
│6   kat│                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       ├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤       │
│       │SELECT * FROM users WHERE active = true                                                                                                                                               │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · enter copy · r refresh · R auto-refresh · q / esc close · F1 help
