tests/snapshots/sizes__slow_queries_80x24.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                 ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ slow queries — pg_stat_statements — r refresh · enter copy · q close ─┐   │
│  │    total ms    mean ms     calls      rows  query                     │   │
│  │    12345.60      12.34   1000000   1000000  SELECT * FROM users WHERE │   │
│  │      800.00       3.20       250       250  UPDATE orders SET status =│   │
└──│                                                                       │───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 ├───────────────────────────────────────────────────────────────────────┤   │
│2 │SELECT * FROM users WHERE active = true                                │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · enter copy · r refresh · F1 +3 more
