tests/snapshots/sizes__tap_baseline_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  W┌ JDBC tap — 8 query · 0 heartbeat · view: baseline · v cycle · Shift-B baseline · s sort ·┐   │
│  O│baseline captured 0s ago · 3 fingerprint(s) · 8 event(s) at capture                       │   │
└───│current ring: 8 event(s) · 0 changed fingerprint(s) (Shift-B recaptures)                  │───┘
┌ re│                                                                                          │───┐
│id │no changes since baseline — nothing new, no regressions, no disappearances.               │   │
│1  │                                                                                          │   │
│2  │                                                                                          │   │
│3  │                                                                                          │   │
│4  │                                                                                          │   │
│5  │                                                                                          │   │
│6  │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   └──────────────────────────────────────────────────────────────────────────────────────────┘   │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   tap baseline captured · 3 fingerprint(s) · 8 event(s)
