tests/snapshots/sizes__tap_baseline_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                  │
│  FROM users                                                                                                          │
│  WHERE plan = 'pro'                                                                                                  │
│  OR┌ JDBC tap — 8 queries · 0 heartbeats · view: baseline · v cycle · Shift-B baseline · s sort · c clear · … ──┐    │
└────│baseline captured 0s ago · 3 fingerprint(s) · 8 event(s) at capture                                         │────┘
┌ res│current ring: 8 event(s) · 0 changed fingerprint(s) (Shift-B recaptures)                                    │────┐
│id  │                                                                                                            │    │
│1   │no changes since baseline — nothing new, no regressions, no disappearances.                                 │    │
│2   │                                                                                                            │    │
│3   │                                                                                                            │    │
│4   │                                                                                                            │    │
│5   │                                                                                                            │    │
│6   │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   tap baseline captured · 3 fingerprint(s) · 8 event(s)
