tests/snapshots/sizes__tap_baseline_60x16.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│>┌ JDBC tap — 8 queries · 0 heartbeats · … ────────────┐  │
│ │baseline captured 0s ago · 3 fingerprint(s) · 8 event│  │
│ │current ring: 8 event(s) · 0 changed fingerprint(s) (│  │
│ │                                                     │  │
└─│no changes since baseline — nothing new, no regressio│──┘
┌ │                                                     │──┐
│i│                                                     │  │
│1│                                                     │  │
│2│                                                     │  │
│3│                                                     │  │
│4└─────────────────────────────────────────────────────┘  │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   tap… captured · 3 fingerprint(s) · 8 event(s)
