tests/snapshots/sizes__tap_baseline_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                    ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ JDBC tap — 8 queries · 0 heartbeats · view: baseline · v cycle · … ───┐   │
│  │baseline captured 0s ago · 3 fingerprint(s) · 8 event(s) at capture    │   │
│  │current ring: 8 event(s) · 0 changed fingerprint(s) (Shift-B recaptures│   │
│  │                                                                       │   │
└──│no changes since baseline — nothing new, no regressions, no disappearan│───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   tap baseline captured · 3 fingerprint(s) · 8 event(s)
